# ar

./: CMakeLists.txt  LICENSE.txt
calibration_filter/resource/: main.qml
calibration_filter/src/: main.cpp
markerdetector/: CMakeLists.txt
markerdetector/include/: marker.h
markerdetector/resource/: main.qml
markerdetector/src/: main.cpp  marker.cpp  markerdetector.cpp  markerdetectorfilter.cpp
markergen/: CMakeLists.txt
